Updated WorkFLow file

--- a/.github/workflows/backend-workflow.yml
+++ b/.github/workflows/backend-workflow.yml
@@ -82,6 +82,8 @@ jobs:
         uses: ./actions/maven-build-action
         with:
           directory: spring-boot-data-jpa-mysql-master
+          GITHUBTOKEN: ${{ secrets.GITHUBTOKEN}}
+          SONARTOKEN: ${{ secrets.SONAR_TOKEN }}
       - name: Archive JAR file
         uses: actions/upload-artifact@v3
         with:
